# nonebot-plugin-celeimprtrc

./: README.md  gen_templ.py  pyproject.toml
.celeimprtrc/: config.template.toml
src/nonebot_plugin_celeimprtrc/: __init__.py  common.py  config.py  data.py  download.py  format.py  github.py
