[project]
name = "nonebot-plugin-celeimprtrc"
version = "0.1.0"
description = "celeste improvement auto uploader"
authors = [
    { name = "EnderHane", email = "53217585+EnderHane@users.noreply.github.com" },
]
dependencies = [
    "nonebot2[httpx,websockets]>=2.2.0",
    "nonebot-adapter-satori>=0.9.3",
    "githubkit[auth-app]>=0.11.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "nonebug>=0.3.5",
    "pytest-asyncio>=0.23.5",
]
template = [
    "tomli-w>=1.0.0",
    "jsf>=0.7.1",
]

[tool.pdm.scripts]
gen-templ.cmd = "gen_templ.py"
gen-templ.env = { "NONEBOT_PLUGIN_CELEIMPRTRC_DEV" = "dev" }
